cabal-version:      3.4
name:               spc
version:            0.1.0.0
synopsis:
  A declarative, statically typed, stack based programing language.

-- description:

-- A URL where users can report bugs.
-- bug-reports:
-- license:

-- A copyright notice.
copyright:          All rights reserved to Vlad Posmangiu Luchian 2020.
category:           languages
author:             Vlad Posmangiu Luchian
maintainer:         cstmlcodes@gmail.com
extra-source-files:
  CHANGELOG.md
  README.md

common Config
  default-language: Haskell2010
  build-depends:    base

common Extensions
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    ViewPatterns

common Dependencies
  build-depends:
    , base
    , containers
    , deepseq
    , ghc-prim
    , hedgehog
    , lens
    , megaparsec
    , mtl
    , optparse-applicative
    , parsec
    , parsers
    , prettyprinter
    , QuickCheck
    , tasty
    , tasty-expected-failure
    , tasty-hedgehog
    , tasty-hunit
    , tasty-quickcheck
    , text
    , transformers

common Language
  hs-source-dirs:   src
  other-modules:
    Aux.Unfoldable
    Space
    Space.Aux.Evaluate
    Space.Aux.Show
    Space.Evaluator
    Space.Evaluator.Exception
    Space.Evaluator.Implementation.IO
    Space.Evaluator.Implementation.Pure
    Space.Evaluator.Machine
    Space.Evaluator.Memory
    Space.Evaluator.Stack
    Space.Language
    Space.Language.Empty
    Space.Language.Location
    Space.Language.Term
    Space.Language.Type
    Space.Language.Variable
    Space.Language.Vector
    Space.Parser
    Space.Parser.Term
    Space.Parser.Token
    Space.TypeCheck.Properties

  other-extensions: OverloadedStrings

common Test
  hs-source-dirs: test
  other-modules:
    Test.Space.Evaluator.Machine
    Test.Space.Language
    Test.Space.Parser

library
  import:          Extensions
  import:          Config
  import:          Dependencies
  hs-source-dirs:  src
  exposed-modules:
    Space
    Space.Aux.Show
    Space.Evaluator
    Space.Evaluator.Exception
    Space.Evaluator.Implementation
    Space.Evaluator.Implementation.IO
    Space.Evaluator.Implementation.Pure
    Space.Evaluator.Machine
    Space.Evaluator.Memory
    Space.Evaluator.Stack
    Space.Language
    Space.Language.Empty
    Space.Language.Location
    Space.Language.Term
    Space.Language.Type
    Space.Language.Variable
    Space.Language.Vector
    Space.Parser
    Space.Parser.Term

--executable tui-interface
--  import:         Extensions
--  import:         Dependencies
--  import:         Language
--  import:         Config
--  main-is:        REPL.hs
--  hs-source-dirs: app
--  hs-source-dirs: src
--  other-modules:  Space.Interface.REPL
--  build-depends:
--    , base
--    , brick
--    , vty
--
--  ghc-options:    -threaded -rtsopts

common Spci
  hs-source-dirs: spci
  other-modules:  Space.Interface.Spci

executable spci
  import:  Spci
  import:  Extensions
  import:  Dependencies
  import:  Language
  import:  Config
  main-is: Spci.hs

common Interpreter
  hs-source-dirs: interpreter
  other-modules:  Space.Interpreter

executable spc
  import:        Interpreter
  import:        Extensions
  import:        Dependencies
  import:        Language
  import:        Config
  main-is:       Interpreter.hs
  other-modules: Space.Interpreter

test-suite tests
  import:        Spci
  import:        Extensions
  import:        Language
  import:        Dependencies
  import:        Test
  import:        Config
  type:          exitcode-stdio-1.0
  main-is:       Test.hs
  build-depends:
    , containers
    , hedgehog
    , HUnit
    , lens
    , mtl
    , prettyprinter
    , QuickCheck
    , tasty
    , tasty-expected-failure
    , tasty-hedgehog
    , tasty-hunit
    , tasty-quickcheck
    , transformers
